--- a/giaodien/home.css
+++ b/giaodien/home.css
@@ -130,7 +130,7 @@ header {
     position: absolute;
     top: -0.6rem;
     right: -0.8rem;
-    background-color: #b9a16b;
+    /* background-color: #b9a16b; */
     color: white !important;
     display: inline-block;
     padding: 0 5px !important;
