--- a/giaodien/home.css
+++ b/giaodien/home.css
@@ -131,7 +131,7 @@ header {
     top: -0.6rem;
     right: -0.8rem;
     /* background-color: #b9a16b; */
-    color: white !important;
+    color: black !important;
     display: inline-block;
     padding: 0 5px !important;
     text-align: center;
